syntax = "proto3";

message Runner {
    string address = 1;
    bytes client_key = 2;
    bool active = 3;
}

message LoadBalancerGroup {
    string id = 1;
}

message GroupPopulation {
    LoadBalancerGroup group = 1;
    repeated Runner runners = 2;
}

message GroupPopulationSnapshot {
    google.protobuf.Timestamp ts = 1;
    repeated GroupPopulation populations = 2;
}

message RunnerCapacityRequest {
    Runner runner = 1;
    int32 capacity = 2;
}

service NodePoolManager {
  rpc RequestCapacity (RunnerCapacityRequest) returns () {}
  rpc LoadBalancerGroupSnapshot() returns (GroupPopulationSnapshot) {}
  rpc LoadBalancerGroupFeed() returns (stream GroupPopulation) {}
}